objects/Approval_Process__c.object
<CustomObject>
    <description>It consists of all the Approval Processes related to a object.</description>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has made the modification in the component.</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It captures all the details about the Approval Process</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entry_Criteria_1__c</fullName>
        <description>It consists first 255 characters of the approval entry criteria.</description>
        <label>Entry Criteria 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entry_Criteria_2__c</fullName>
        <description>It consists part of approval entry criteria that is after first 255 characters of the approval entry criteria.</description>
        <label>Entry Criteria 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entry_Criteria__c</fullName>
        <description>Criteria at which approval process fires.</description>
        <label>Entry Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Object to which this Approval Process applies.</description>
        <label>Related to Object</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Approval Processes</relationshipLabel>
        <relationshipName>Approval_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of user story, change request, ticket which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Approval Processes</relationshipLabel>
        <relationshipName>Approval_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Process</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approval Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>